// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Controls Help 1`] = `
<div
  class="s-STWbXzfYiRLQ"
>
  <h3
    class="s-STWbXzfYiRLQ"
  >
    Contrôler un ou plusieurs objets
  </h3>
   
  <section
    class="s-STWbXzfYiRLQ"
  >
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Déplacer
        :
      </span>
       
      <img
        alt="Tiré-déplacé un objet avec le clic gauche"
        class="s-4iEuBZCKGaMy"
        src="/images/help/left-drag-object.webp"
      />
      <img
        alt="Tiré-déplacé un objet avec un tap"
        class="s-4iEuBZCKGaMy"
        src="/images/help/pointer-drag-object.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Retourner
        :
      </span>
       
      <img
        alt="Clic gauche sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/left-object.webp"
      />
      <img
        alt="Tap sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/pointer-object.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Tourner de 90°
        :
      </span>
       
      <img
        alt="Clic gauche long sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/long-left-object.webp"
      />
      <img
        alt="Tap long sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/long-pointer-object.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
  </section>
   
  <h3
    class="s-STWbXzfYiRLQ"
  >
    Contrôler un objet
  </h3>
   
  <section
    class="s-STWbXzfYiRLQ"
  >
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Ouvrir le menu
        :
      </span>
       
      <img
        alt="Clic droit sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/right-object.webp"
      />
      <img
        alt="Tap avec deux doigts sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/two-pointers-object.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Voir en détail
        :
      </span>
       
      <img
        alt="Double clic gauche sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/double-left-object.webp"
      />
      <img
        alt="Double tap sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/double-pointer-object.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Ajouter à la sélection
        :
      </span>
       
      <img
        alt="tooltips.help-left-drag-select"
        class="s-4iEuBZCKGaMy"
        src="/images/help/left-drag-select.webp"
      />
      <img
        alt="tooltips.help-pointer-drag-select"
        class="s-4iEuBZCKGaMy"
        src="/images/help/pointer-drag-select.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Vider la sélection
        :
      </span>
       
      <img
        alt="Clic gauche en dehors de la sélection"
        class="s-4iEuBZCKGaMy"
        src="/images/help/left-outside-selection.webp"
      />
      <img
        alt="Tap en dehors de la sélection"
        class="s-4iEuBZCKGaMy"
        src="/images/help/pointer-outside-selection.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
  </section>
   
  <h3
    class="s-STWbXzfYiRLQ"
  >
    Contrôler la caméra
  </h3>
   
  <section
    class="s-STWbXzfYiRLQ"
  >
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Déplacer
        :
      </span>
       
      <img
        alt="Tiré-déplacé avec le clic droit"
        class="s-4iEuBZCKGaMy"
        src="/images/help/right-drag.webp"
      />
      <img
        alt="Tap avec deux doigts sur un objet"
        class="s-4iEuBZCKGaMy"
        src="/images/help/two-pointers-drag.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Pivoter et incliner
        :
      </span>
       
      <img
        alt="tooltips.help-middle-drag"
        class="s-4iEuBZCKGaMy"
        src="/images/help/middle-drag.webp"
      />
      <img
        alt="tooltips.help-three-pointers-drag"
        class="s-4iEuBZCKGaMy"
        src="/images/help/three-pointers-drag.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Zoomer
        :
      </span>
       
      <img
        alt="Molette de la souris"
        class="s-4iEuBZCKGaMy"
        src="/images/help/mouse-wheel.webp"
      />
      <img
        alt="Pincer"
        class="s-4iEuBZCKGaMy"
        src="/images/help/pinch.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Enregistrer la position (Ctrl+1~9)
        :
      </span>
       
      <img
        alt="Clic sur le bouton \\"nouvelle caméra\\""
        class="s-4iEuBZCKGaMy"
        src="/images/help/new-camera.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Restaurer la position
        :
      </span>
       
      <img
        alt="Clic sur un emplacement de caméra"
        class="s-4iEuBZCKGaMy"
        src="/images/help/restore-camera.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
    <div
      class="s-4iEuBZCKGaMy"
    >
      <span
        class="s-4iEuBZCKGaMy"
      >
        Mettre à jour la position
        :
      </span>
       
      <img
        alt="Clic long sur un emplacement de caméra"
        class="s-4iEuBZCKGaMy"
        src="/images/help/update-camera.webp"
      />
    </div>
    <!--&lt;ControlHelp&gt;-->
  </section>
</div>
`;

exports[`Primary image icon only 1`] = `
<button
  class="s-NMyTiX1zi6rz"
>
  <span
    class="icon s-NMyTiX1zi6rz"
  >
    <svg
      height="20"
      slot="icon"
      viewBox="0 0 14 14"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 .175c-3.872 0-7 3.128-7 7 0 3.084 2.013 5.71 4.79 6.65.35.066.482-.153.482-.328v-1.181c-1.947.415-2.363-.941-2.363-.941-.328-.81-.787-1.028-.787-1.028-.634-.438.044-.416.044-.416.7.044 1.071.722 1.071.722.635 1.072 1.641.766 2.035.59.066-.459.24-.765.437-.94-1.553-.175-3.193-.787-3.193-3.456 0-.766.262-1.378.721-1.881-.065-.175-.306-.897.066-1.86 0 0 .59-.197 1.925.722a6.754 6.754 0 0 1 1.75-.24c.59 0 1.203.087 1.75.24 1.335-.897 1.925-.722 1.925-.722.372.963.131 1.685.066 1.86.46.48.722 1.115.722 1.88 0 2.691-1.641 3.282-3.194 3.457.24.219.481.634.481 1.29v1.926c0 .197.131.415.481.328C11.988 12.884 14 10.259 14 7.175c0-3.872-3.128-7-7-7z"
        fill="currentColor"
      />
    </svg>
    <!--&lt;Github-logo.svg.rollup-plugin&gt;-->
  </span>
  
  
  
</button>
`;

exports[`Primary with icon only 1`] = `
<button
  class="s-NMyTiX1zi6rz"
>
  <span
    class="material-icons s-NMyTiX1zi6rz"
  >
    videogame_asset
  </span>
  
  
  
</button>
`;

exports[`Primary with text 1`] = `
<button
  class="s-NMyTiX1zi6rz"
>
  
  <span
    class="text s-NMyTiX1zi6rz"
  >
    Hello!
  </span>
  
  
</button>
`;

exports[`Primary with text and icon 1`] = `
<button
  class="s-NMyTiX1zi6rz"
>
  <span
    class="material-icons s-NMyTiX1zi6rz"
  >
    emoji_people
  </span>
  
  <span
    class="text s-NMyTiX1zi6rz"
  >
    Hello!
  </span>
  
  
</button>
`;

exports[`Primary with text and image icon 1`] = `
<button
  class="s-NMyTiX1zi6rz"
>
  <span
    class="icon s-NMyTiX1zi6rz"
  >
    <svg
      height="20"
      slot="icon"
      viewBox="0 0 14 14"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 .175c-3.872 0-7 3.128-7 7 0 3.084 2.013 5.71 4.79 6.65.35.066.482-.153.482-.328v-1.181c-1.947.415-2.363-.941-2.363-.941-.328-.81-.787-1.028-.787-1.028-.634-.438.044-.416.044-.416.7.044 1.071.722 1.071.722.635 1.072 1.641.766 2.035.59.066-.459.24-.765.437-.94-1.553-.175-3.193-.787-3.193-3.456 0-.766.262-1.378.721-1.881-.065-.175-.306-.897.066-1.86 0 0 .59-.197 1.925.722a6.754 6.754 0 0 1 1.75-.24c.59 0 1.203.087 1.75.24 1.335-.897 1.925-.722 1.925-.722.372.963.131 1.685.066 1.86.46.48.722 1.115.722 1.88 0 2.691-1.641 3.282-3.194 3.457.24.219.481.634.481 1.29v1.926c0 .197.131.415.481.328C11.988 12.884 14 10.259 14 7.175c0-3.872-3.128-7-7-7z"
        fill="currentColor"
      />
    </svg>
    <!--&lt;Github-logo.svg.rollup-plugin&gt;-->
  </span>
  
  <span
    class="text s-NMyTiX1zi6rz"
  >
    Hello!
  </span>
  
  
</button>
`;

exports[`Secondary with icon only 1`] = `
<button
  class="secondary s-NMyTiX1zi6rz"
>
  <span
    class="material-icons s-NMyTiX1zi6rz"
  >
    videogame_asset
  </span>
  
  
  
</button>
`;

exports[`Secondary with text 1`] = `
<button
  class="secondary s-NMyTiX1zi6rz"
>
  
  <span
    class="text s-NMyTiX1zi6rz"
  >
    Hello!
  </span>
  
  
</button>
`;

exports[`Secondary with text and icon 1`] = `
<button
  class="secondary s-NMyTiX1zi6rz"
>
  <span
    class="material-icons s-NMyTiX1zi6rz"
  >
    emoji_people
  </span>
  
  <span
    class="text s-NMyTiX1zi6rz"
  >
    Hello!
  </span>
  
  
</button>
`;

exports[`Transparent with text 1`] = `
<button
  class="transparent s-NMyTiX1zi6rz"
>
  
  <span
    class="text s-NMyTiX1zi6rz"
  >
    Hello!
  </span>
  
  
</button>
`;

exports[`With badge 1`] = `
HTMLCollection [
  <div>
    Vous avez...
  </div>,
  <button
    class="s-NMyTiX1zi6rz"
  >
    <span
      class="material-icons s-NMyTiX1zi6rz"
    >
      email
    </span>
    
    <span
      class="text s-NMyTiX1zi6rz"
    >
      Inbox
    </span>
    
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      5
    </span>
    
  </button>,
  <div>
    Nouveau(x) message(s).
  </div>,
]
`;
